--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.rbc
 .bundle
 .config
+.DS_Store
 coverage
 InstalledFiles
 lib/bundler/man
@@ -11,6 +12,7 @@ spec/reports
 test/tmp
 test/version_tmp
 tmp
+target/
 
 # YARD artifacts
 .yardoc
@@ -19,3 +21,4 @@ doc/
 
 # RM artifacts
 .idea/
+.iml
